--- a/src/index.css
+++ b/src/index.css
@@ -22,6 +22,6 @@ body {
         @apply text-titleLight bg-gray-300 dark:text-titleDark dark:bg-neutral-700;
     }
     .home-icon {
-        @apply cursor-pointer rounded-full p-1 hover:bg-gray-300 dark:hover:bg-neutral-700;
+        @apply cursor-pointer rounded-full p-[6px] hover:bg-gray-300 dark:hover:bg-neutral-700;
     }
 }
